Fix icon spacing

--- a/src/pages/airesearch/screens/SideLinks/index.css
+++ b/src/pages/airesearch/screens/SideLinks/index.css
@@ -2,9 +2,10 @@
 	position: sticky;
 	background-color: red;
 	display: inline-block;
-	margin-top: -128px;
+	margin-top: -246px;
 	margin-left: 20px;
 	height: 0px;
+	bottom: 0px;
 }
 
 .line-up {
